Fix activities besides Spotify not showing

--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -1,6 +1,6 @@
 :root {
   color-scheme: dark !important;
-  background: url('/ImagesV2/background-min.jpg');
+  background: url('https://cdn.nest.rip/uploads/d817d6b5-29e9-4c25-8012-2b766389723d.jpg');
   background-position: center;
   background-size: 30rem;
 
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  gap: 1rem;
   backdrop-filter: brightness(75%);
 }
 
@@ -170,7 +170,9 @@ d4{
   width: 8.89rem !important;
   height: 8.89rem !important;
   position: relative;
-
+  margin-bottom: -2.4rem !important;
+  margin-left: 1rem;
+  z-index: 1 !important;
 }
 
 .status-indicator {
@@ -213,10 +215,8 @@ d4{
 #activities-list {
     transition: opacity 0.3s ease-in-out;
     opacity: 1;
-
     font-size: x-small;
     padding: 0.5rem;
-    
 
     width: unset !important;
     max-width: 100rem;
@@ -297,7 +297,7 @@ d4{
     display: inline-flex;
     align-items: center;
     gap: 0.25rem;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.39);
     backdrop-filter: blur(4px);
     border-radius: 0.375rem;
     padding: 0 0.3rem;
@@ -334,10 +334,6 @@ d4{
   .activity-item-1{
     display: none !important;
   }
-
-  .clan-badge {
-    display: none !important;
-  }
 }
 
 /*------------Discord Server(s) Panel------------*/
@@ -367,6 +363,7 @@ a {
     font-family: "Comic Neue", cursive;
     font-weight: 700;
     display: none;
+    z-index: 1 !important;
   }
   &:hover > span { display: unset; }
 }
